--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,8 @@
 @font-face {
   font-family: "Pixel";
   src: url("/fonts/BoldPixels.ttf") format("truetype");
-  font-weight: bold;
+  font-weight: normal;
   font-style: normal;
-  font-display: swap;
   font-display: swap;
 }
 
